<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>1.4.1</version>
        <relativePath/>
    </parent>
    <groupId>de.cuioss.portal.ui</groupId>
    <artifactId>cui-portal-ui</artifactId>
    <name>cui portal ui</name>
    <version>1.0.0-SNAPSHOT</version>
    <description>Provides the JSF based UI-components defining the CUIOSS Portal.</description>
    <packaging>pom</packaging>
    <url>https://github.com/cuioss/cui-portal-ui/</url>
    <scm>
        <url>https://github.com/cuioss/cui-portal-ui/</url>
        <connection>scm:git:https://github.com/cuioss/cui-portal-ui.git</connection>
        <developerConnection>scm:git:https://github.com/cuioss/cui-portal-ui/</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/cuioss/cui-portal-ui/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <version.cui.jsf.components>1.1.0-SNAPSHOT</version.cui.jsf.components>
        <version.cui.portal.core>1.4.0</version.cui.portal.core>
    </properties>

    <modules>
        <module>bom</module>
        <module>modules</module>
    </modules>
</project>
